--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,12 @@
       <scope>test</scope>
     </dependency>
     
-    
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>2.3.2</version>
+    </dependency>
+	  
   </dependencies>
   
   <build>
